# arXiv-literature-survey-system

./: .env.example  .gitignore  PROJECT_ANALYSIS.md  README.md  build_dashboard_exe.ps1  cluster_analysis.py  dashboard_app.py  fetch_arxiv.py  generate_cards.py  llm_client.py  pipeline_full.err  pyproject.toml  requirements.txt  run_pipeline.py  serve_frontend.py  survey_dashboard.spec  survey_dashboard_modern.spec  weekly_survey_generator.py  workflow_metadata.py
.github/workflows/: Test.yml  weekly.yml
cfgs/envs/: .env.example
data/: papers_raw.json
dats/cards/: paper_cards.jsonl
dats/raws/: papers_raw.json
docs/analyses/: project_analysis.md  workflow_guide.md
docs/readmes/: usage.txt  viewer_usage.md
frontend/: index.html  styles.css
outputs/: comparison_table.csv  pipeline_history.json  pipeline_status.json  taxonomy.md  trend_analysis.md  weekly_digest_latest.md
outs/digests/: weekly_digest_latest.md
outs/digests/weeklies/: 2026-04-19.md  2026-04-21.md
outs/stats/: pipeline_history.json  pipeline_status.json
outs/tables/: comparison_table.csv
outs/taxons/: taxonomy.md
outs/trends/: trend_analysis.md
prompts/: card_extraction.txt  taxonomy_generation.txt  weekly_digest.txt
tls/builds/: build_dashboard_exe.ps1  build_viewer_exe.ps1  survey_dashboard_modern.spec  survey_viewer_standalone.spec  survey_viewer_standalone_v2.spec  survey_viewer_standalone_v3.spec  survey_viewer_standalone_v4.spec  survey_viewer_standalone_v5.spec
uis/assets/: styles.css
uis/dashboards/: app.js  index.html
uis/viewers/: viewer.html  viewer.js
(+58 files in other folders)
