[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-literature-survey-system"
version = "1.0.0"
description = "Automated arXiv literature tracking and weekly survey generation system."
requires-python = ">=3.11"
dependencies = [
  "arxiv>=2.1.3",
  "openai>=1.40.0",
  "pandas>=2.0.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
lsss-run = "pkgs.surveys.clis.run:main"
lsss-serve = "pkgs.surveys.clis.serve:main"
lsss-dashboard = "pkgs.surveys.clis.dashboard:main"
lsss-viewer = "pkgs.surveys.clis.viewer:main"

[tool.setuptools]
include-package-data = true
